--- a/test.css
+++ b/test.css
@@ -8,7 +8,7 @@
 #text {
     filter: url("#displacement_noise") blur(5px) url("#contrast");
     margin: 0;
-    word-break: break-all;
+    overflow-wrap: break-word;
     font-family: monospace;
     font-weight: 900;
     font-size: 16rem;
