--- a/test.css
+++ b/test.css
@@ -1,8 +1,29 @@
-#container {
-    position: absolute;
+@import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
+body, html {
+    overflow-x: hidden;
+    color: white;
+}
+
+html {
+    background-color: black;
+}
+
+#bg-container {
+    position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100vh;
     margin: 0;
+    /* background: black; */
+    user-select: none;
+    z-index: -1;
 }
 
 #text {
@@ -15,6 +36,10 @@
     line-height: 13rem;
     overflow-y: scroll;
     height: 100vh;
+    overflow: hidden;
+    transform: translateX(30px);
+    opacity: 0.1;
+    color: white;
 }
 
 #text::-webkit-scrollbar {
@@ -26,7 +51,44 @@ html {
 }
 
 header {
-    font-size: 36pt;
+    font-size: 16pt;
     color: white;
-    background-color: black;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    filter: blur(1px);
+}
+
+header > span {
+    text-align: center;
+    font-family: "Anton", sans-serif;
+    flex: 1;
+}
+
+header span#big-head {
+    z-index: -100;
+    font-size: 36pt;
+    font-family: "Anton", sans-serif;
+    filter: drop-shadow(0 0 2rem white);
+    text-shadow: white 0px 0px 0.75rem;
+    animation: dropflicker 1s step-end 0s infinite alternate;
+}
+
+@keyframes dropflicker {
+    0% { filter: drop-shadow(0 0 2rem white); }
+    25% { filter: drop-shadow(0 0 4rem white); }
+    50% { filter: drop-shadow(0 0 2.25rem white); }
+    75% { filter: drop-shadow(0 0 4.75rem white); }
+    85% { filter: drop-shadow(0 0 2rem white); }
+    100% { filter: drop-shadow(0 0 1.75rem white); }
+}
+
+@keyframes textflicker {
+    0% { text-shadow: white 0px 0px 10px }
+    25% { text-shadow: white 0px 0px 15px }
+    50% { text-shadow: white 0px 0px 7px }
+    75% { text-shadow: white 0px 0px 13px }
+    100% { text-shadow: white 0px 0px 16px }
 }
